ingreso nuevos cambios a mi pagina, tales como css.

--- a/index.html
+++ b/index.html
@@ -6,37 +6,46 @@
     <title>CARLOS ANDREY MARTINEZ CAMACHO </title>
     
 </head>
-<body>
 
-  <img src="./PXL_20240407_134101428.MV.jpg" alt="">
+<link rel="stylesheet" href="./reset.css">
+<link rel="stylesheet" href="./estilos.css"/>
+
+<body class="fondo">
+    <div id="logocontainer">
+         <img src="./LOGO CAMC.jpg" class="logo">
+    </div>
     <header>
-        <h1>¡Hola, soy Carlos Andrey Martinez Camacho!</h1>
+        <div id="titulosprincipales">
+          <h1 class="mitexto">¡Hola, soy Carlos Andrey Martinez Camacho!</h1>
+        </div>
     </header>
     <div class="container">
-        <h2>Un poco sobre mí</h2>
-        <p>
+        <div class="titulosecundario">
+           <h2>Un poco sobre mí</h2>
+        </div>
+        <p class="mitexto">
           Soy un apasionado que reside en la vibrante ciudad de Bogotá, Colombia. Desde mi infancia, siempre he disfrutado del acto de conducir vehículos, pero con el tiempo, llegó un momento en el que sentí la necesidad de explorar nuevas oportunidades y expandir mis horizontes.
 
-Después de probar algunas carreras como contabilidad y electricidad, me di cuenta de que mi verdadera pasión y potencial residían en el mundo de la programación. A medida que me adentraba en este fascinante campo, descubrí una afinidad natural y un gusto por la resolución de problemas y la creatividad que ofrece la programación.
+          Después de probar algunas carreras como contabilidad y electricidad, me di cuenta de que mi verdadera pasión y potencial residían en el mundo de la programación. A medida que me adentraba en este fascinante campo, descubrí una afinidad natural y un gusto por la resolución de problemas y la creatividad que ofrece la programación.
 
-Decidí comprometerme con esta nueva dirección en mi vida, y me embarqué en un viaje de autoaprendizaje y formación académica en programación. Busqué diversas opciones de estudio que me permitieran trabajar y estudiar al mismo tiempo, con el objetivo de transformar mi vida y enriquecer mi intelecto.
+          Decidí comprometerme con esta nueva dirección en mi vida, y me embarqué en un viaje de autoaprendizaje y formación académica en programación. Busqué diversas opciones de estudio que me permitieran trabajar y estudiar al mismo tiempo, con el objetivo de transformar mi vida y enriquecer mi intelecto.
 
-Ahora, estoy emocionado por iniciar esta nueva etapa en mi carrera, con la determinación de sacarla adelante y alcanzar mis metas. La sensación de estar al comienzo de este camino me recuerda a mis primeros días aprendiendo a conducir: llena de emoción, desafíos y la promesa de un futuro brillante.
+          Ahora, estoy emocionado por iniciar esta nueva etapa en mi carrera, con la determinación de sacarla adelante y alcanzar mis metas. La sensación de estar al comienzo de este camino me recuerda a mis primeros días aprendiendo a conducir: llena de emoción, desafíos y la promesa de un futuro brillante.
         </p>
 
-        <hr>
+        <hr class="separadores">
 
-        <h2>Aqui me gustaria agregar proyectos que deseo iniciar. </h2>
-        <ul>
+        <h2 class="mitexto">Aqui me gustaria agregar proyectos que deseo iniciar. </h2>
+        <ul class="mitexto">
             <li>Proyecto 1: </li>
             <li>Proyecto 2: </li>
             <li>Proyecto 3: </li>
         </ul>
-        <hr>
+        <hr class="separadores">
 
-        <h2> ¡Me encuentras en todos lados!</h2>
-        <p>Puedes contactarme a través de:</p>
-        <ul>
+        <h2 class="mitexto"> ¡Me encuentras en todos lados!</h2>
+        <p class="mitexto">Puedes contactarme a través de:</p>
+        <ul class="mitexto">
             <li>Email: krlos1993a@gmail.com</li>
             <li>Teléfono: 3043691037</li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/carlos-martinez-4145291b4/">Carlos Martinez</a></li>
